tests/negative/gold/incomplete_string2_test.gold
tests/negative/incomplete_string2_test.toit:11:9: error: Unterminated string
    $(z)
        ^
tests/negative/incomplete_string2_test.toit:9:7: error: Type mismatch. Expected 'int'. Got 'string'
  foo "str"
      ^~~~~
Compilation failed.
